--- a/Reflexion/19022024.md
+++ b/Reflexion/19022024.md
@@ -2,14 +2,12 @@
 
 ## Ziele/Resultate
 
+Ich habe fast alle Aufgaben des Aufgabenblattes "A_Daten_Codieren_Num" gelöst.
 
-## Knacknüsse
+## Schwierigkeiten
 
+Ich habe vorallem Schwierigkeiten bei der Aufgabe 9 und 10 gehabt. Im Nachhinein habe ich diese aber verstanden.
 
 ## Tools
 
-
-## Kommandos
-
-
-## Fragen
+Ich habe VS benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
