add C_Bilder_Codieren, update Reflexionen

--- a/Reflexion/04032024.md
+++ b/Reflexion/04032024.md
@@ -1,4 +1,4 @@
-# Reflexion 19.02.2024
+# Reflexion 04.03.2024
 
 ## Ziele/Resultate
 
@@ -10,4 +10,4 @@ Ich habe nur bei der Prüfung gewisse Fragen keine Ahnung mehr gehabt. Sonst gin
 
 ## Tools
 
-Ich habe VS benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
+Ich habe VS Code benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
