--- a/Reflexion/19022024.md
+++ b/Reflexion/19022024.md
@@ -10,4 +10,4 @@ Ich habe vorallem Schwierigkeiten bei der Aufgabe 9 und 10 gehabt. Im Nachhinein
 
 ## Tools
 
-Ich habe VS benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
+Ich habe VS Code benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
