--- a/Reflexion/26022024.md
+++ b/Reflexion/26022024.md
@@ -10,6 +10,6 @@ Ich habe nur Schwierigkeiten bei der Aufgabe 5 gehabt.
 
 ## Tools
 
-- **VS:** habe ich benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
+- **VS Code:** habe ich benutzt, um diese Reflexion zu schreiben, als auch um die Aufgaben zu bearbeiten. 
 - **Notepad++:** habe ich benutzt, um die Aufgabe 3f zu lösen
 - **QR-Code-Generator by Bitly:** habe ich verwendet, um den QR-Code für die Aufgabe 4 zu generieren.
